--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,5 +1,5 @@
 .main {
-    size: 100%;
+    size: 100vh;
 }
 .main-container {
     position: relative;
@@ -8,11 +8,19 @@
 
 .contact-box {
     display: flex;
-    margin-bottom: 100px;
-    margin-left: 100px;
+    margin-left: 2vw;
     background: rgba(0, 0, 0, 0.7);
-    width: 30em;
-    padding: 2em;
+    width: 38vw;
+    padding: 3.5vh;
+}
+
+div.contact {
+  margin-top: 40vh;
+  margin-right: 5vw;
+}
+
+div#main {
+  margin-top: 2vh;
 }
 .contact-icon {
   flex-basis: 75px;
@@ -35,7 +43,7 @@
 }
 .name {
     justify-content: center;
-    font-size: 3em;
+    font-size: 3vw;
     color: white;
 }
 
@@ -89,7 +97,9 @@
   .tm-nav-link:hover,
   .tm-nav-link:focus {
     text-decoration: none;
-    color: #950000;
+    color: white;
+    font-weight: bold;
+    background-color: rgba(0,0,0,0.55);
   }
   
   .tm-bg-dark {
@@ -120,9 +130,10 @@
     width: 100%;
   }
   
-  .tm-section {
-    margin-right: 75px;
-    max-width: 100%;
+  section.tm-section {
+    margin-top: 0vh;
+    margin-right: 30px;
+    width: 60vw;
   }
   
   .tm-section-title {
@@ -162,6 +173,10 @@
   margin-left: 40px;
   margin-top: 25px;
 }
+
+.tm-nav-link {
+  text-decoration: none;
+}
 .tm-nav-link:link,
 .tm-nav-link:visited {
   color: black;
@@ -171,10 +186,9 @@
   margin-bottom: 6px;
   text-align: center;
 }
+
   .tm-link:focus,
   .tm-link:hover {
   text-decoration: none;
   color: #950000;
 }
-
-  
