--- a/templates/index.html
+++ b/templates/index.html
@@ -11,23 +11,29 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
     />
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 
 </head>
 <body class="about-me">  
-    
+    <script>
+        $(document).ready(function() {
+            $('.tm-nav-item').removeClass('active');
+            $('#about-me').addClass('active');
+        })
+    </script>
     <div class="tm-main-container">
       <div class="tm-top-container">
         <!-- Menu -->
         <nav class="tm-nav">
       
           <ul class="tm-nav-links">
-            <li class="tm-nav-item active">
+            <li class="tm-nav-item active" id="about-me">
               <a href="/" data-align="right" class="tm-nav-link">About me</a>
             </li>
-            <li class="tm-nav-item">
+            <li class="tm-nav-item" id="projects">
               <a href="/projects" data-align="right" class="tm-nav-link">Projects</a>
             </li>
-            <li class="tm-nav-item">
+            <li class="tm-nav-item" id="technologies">
               <a href="/technologies" data-align="middle"class="tm-nav-link">Technologies</a>
             </li>
           
@@ -35,21 +41,27 @@
         </nav>
 
         <!-- Personal info -->
-          <div class="container personal tm-bg-dark">
-            <div class="row">
-              <div class="col">
-                <img src="/static/images/profile-photo.jpg" class="rounded-circle" alt="Profile image" width="200" height="200">
+          <div class="d-flex flex-column">
+              <div class="container personal tm-bg-dark">
+                <div class="row">
+                  <div class="col">
+                    <img src="/static/images/profile-photo.jpg" class="rounded-circle" alt="Profile image" width="200" height="200">
+                  </div>
+                  <div class="col align-self-center" style="margin-right: 10px;">
+                    <div class="row name">Nikolay</div>
+                    <div class="row name">Deyanov</div>
+                  </div>
+                </div>
               </div>
-              <div class="col align-self-center" style="margin-right: 10px;">
-                <div class="row name">Nikolay</div>
-                <div class="row name">Deyanov</div>
+              <div class="container tm-bg-dark job-description">
+                <h3>Junior embedded developer</h3>
               </div>
-            </div>
-          </div>  
+          </div>
       </div>
 
       <div class="container-fluid" id="main">
         <div class="d-flex justify-content-between">
+            <div class="d-flex flex-column justify-content-end">
                 <div class="contact">
                     <div class="contact-box">
                             <a href="https://www.instagram.com/endeyy__/" class="contact-icon"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="orange" class="bi bi-instagram" viewBox="0 0 16 16">
@@ -69,7 +81,8 @@
                             </svg></a><p> deyanov.nikolay@gmail.com </p>
                     </div>
                   </div>
-          <div class="">
+                </div>
+          <div>
             <!-- Site content -->
             <div class="tm-content">
               <!-- Section -->
@@ -79,11 +92,12 @@
                 </h2>
                 <div class="tm-textbox tm-bg-dark">
                   <p>
-                    Hello there! My name is Nikolay Deyanov and I am currently an Embedded software developer at Bosch ECS Sofia.
-                      I have
+                    Hello there! My name is Nikolay Deyanov, 18 years old and I am currently a Junior embedded developer at Bosch ECS Sofia.
+                      I recently graduated with excellence from high school ELSYS in Sofia, where I studied programming.
                   </p>
                   <p class="mb-0">
-                    I like doing sports in general, but I do prefer mountain sports like ski, hiking and downhill biking.
+                    As for my hobbies and interests... I like doing sports in general, but I do prefer mountain sports like ski, hiking and downhill biking.
+                      I am very much into car racing and embedded development.
                   </p>
                 </div>
 
