--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -15,12 +15,12 @@
 }
 
 div.contact {
-  margin-top: 40vh;
   margin-right: 5vw;
 }
 
 div#main {
   margin-top: 2vh;
+  margin-bottom: 5vh;
 }
 .contact-icon {
   flex-basis: 75px;
@@ -36,7 +36,7 @@ div#main {
     display: flex;
     float: left;
     justify-content: space-evenly;
-    width: auto;
+    width: 30vw;
     margin-top: 3rem;
     margin-left: 3rem;
     padding: 1em;
@@ -93,6 +93,14 @@ div#main {
     list-style: none;
   }
 
+  div.job-description {
+    width: 30vw;
+    margin-left: 3rem;
+    margin-top: 2vh;
+    padding: 2vh;
+    text-align: center;
+  }
+
   .tm-nav-item.active .tm-nav-link,
   .tm-nav-link:hover,
   .tm-nav-link:focus {
@@ -105,6 +113,19 @@ div#main {
   .tm-bg-dark {
     background: rgba(0, 0, 0, 0.7);
   }
+
+  li.experienced-item {
+    background: rgba(0, 0, 0, 0.4);
+    color: rgba(255, 255, 255, 0.8);
+  }
+
+  li.not-experienced-item {
+    background: rgba(0, 0, 0, 0.3);
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 16px;
+
+  }
+
   
   .tm-site-header-box {
     display: inline-block;
@@ -124,7 +145,6 @@ div#main {
   }
   
   .tm-content {
-    padding-bottom: 50px;
     display: flex;
     justify-content: flex-end;
     width: 100%;
@@ -174,21 +194,13 @@ div#main {
   margin-top: 25px;
 }
 
+
 .tm-nav-link {
   text-decoration: none;
-}
-.tm-nav-link:link,
-.tm-nav-link:visited {
   color: black;
   background-color: white;
   padding: 10px 40px;
   display: block;
   margin-bottom: 6px;
   text-align: center;
-}
-
-  .tm-link:focus,
-  .tm-link:hover {
-  text-decoration: none;
-  color: #950000;
 }
