--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -11,45 +11,56 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
     />
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </head>
-<body class="technologies">  
-    
+<body class="technologies">
+    <script>
+        $(document).ready(function() {
+            $('.tm-nav-item').removeClass('active');
+            $('#technologies').addClass('active');
+        })
+    </script>
     <div class="tm-main-container">
       <div class="tm-top-container">
         <!-- Menu -->
         <nav class="tm-nav">
       
           <ul class="tm-nav-links">
-            <li class="tm-nav-item">
+            <li class="tm-nav-item active" id="about-me">
               <a href="/" data-align="right" class="tm-nav-link">About me</a>
             </li>
-            <li class="tm-nav-item">
+            <li class="tm-nav-item" id="projects">
               <a href="/projects" data-align="right" class="tm-nav-link">Projects</a>
             </li>
-            <li class="tm-nav-item active">
+            <li class="tm-nav-item" id="technologies">
               <a href="/technologies" data-align="middle"class="tm-nav-link">Technologies</a>
             </li>
-          
+
           </ul>
         </nav>
 
         <!-- Personal info -->
-          <div class="container personal tm-bg-dark">
-            <div class="row">
-              <div class="col">
+          <div class="d-flex flex-column">
+              <div class="container personal tm-bg-dark">
+                <div class="row">
+                  <div class="col">
                     <img src="/static/images/profile-photo.jpg" class="rounded-circle" alt="Profile image" width="200" height="200">
+                  </div>
+                  <div class="col align-self-center" style="margin-right: 10px;">
+                    <div class="row name">Nikolay</div>
+                    <div class="row name">Deyanov</div>
+                  </div>
+                </div>
               </div>
-              <div class="col align-self-center" style="margin-right: 10px;">
-                <div class="row name">Nikolay</div>
-                <div class="row name">Deyanov</div>
+              <div class="container tm-bg-dark job-description">
+                <h3>Junior embedded developer</h3>
               </div>
-            </div>
-          </div>  
+          </div>
       </div>
-      
 
       <div class="container-fluid" id="main">
         <div class="d-flex justify-content-between">
+            <div class="d-flex flex-column justify-content-end">
                 <div class="contact">
                     <div class="contact-box">
                             <a href="https://www.instagram.com/endeyy__/" class="contact-icon"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="orange" class="bi bi-instagram" viewBox="0 0 16 16">
@@ -69,7 +80,8 @@
                             </svg></a><p> deyanov.nikolay@gmail.com </p>
                     </div>
                   </div>
-          <div class="">
+                </div>
+          <div>
             <!-- Site content -->
             <div class="tm-content">
               <!-- Section -->
@@ -79,8 +91,24 @@
                 </h2>
                 <div class="tm-textbox tm-bg-dark">
                   <p>
-                    I've done a lot of small and medium sized school projects, but the most notable are a web magazine and a battlebot.
-                    The github repos of which you can find in my github, see the bottom-left corner.
+                    I have good experience with:
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item experienced-item">C/C++</li>
+                      <li class="list-group-item experienced-item">Python</li>
+                      <li class="list-group-item experienced-item">Java</li>
+                      <li class="list-group-item experienced-item">HTML/CSS/JS</li>
+                      <li class="list-group-item experienced-item">SQL databases</li>
+                      <li class="list-group-item experienced-item">Raspberry Pi / Arduino</li>
+                    </ul>
+                  </p>
+                  <p>
+                    I have some experience with:
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item not-experienced-item">ReactJS</li>
+                      <li class="list-group-item not-experienced-item">REST API</li>
+                      <li class="list-group-item not-experienced-item">C#</li>
+                      <li class="list-group-item not-experienced-item">B4A language</li>
+                    </ul>
                   </p>
                 </div>
 
